<resources>

    <!--- App Names -->
    <string name="app_name">Speisekarte</string>
    <string name="peter_meyer_gastro">Peter Meyer Gastro</string>

    <!--- Buttons -->
    <string name="order">hinzufügen</string>

    <!--- Menu sorted -->
    <string name="menu">Speisekarte</string>
    <string name="appetizers">Vorspeisen</string>
    <string name="vegetarian">Vegetarisch</string>
    <string name="meat">Fleisch</string>
    <string name="fish">Fisch</string>
    <string name="desserts">Nachspeisen</string>
    <string name="drinks">Getränke</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="firsttry">First Try</string>

</resources>
