<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttons">

            <RadioGroup
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="5dp"
                android:id="@+id/map_type_group"
                android:background="@android:color/transparent"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/type_btn_Gerichte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/menu"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_vorspeisen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/appetizers"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_veggie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/vegetarian"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_fleisch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/meat"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_fisch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/fish"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_nachspeisen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/desserts"
                    android:textSize="25sp"/>

                <RadioButton
                    android:id="@+id/type_btn_drinks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/standard_button_margin"
                    android:button="@null"
                    android:textAlignment="center"
                    android:text="@string/drinks"
                    android:textSize="25sp"/>

            </RadioGroup>

</android.support.constraint.ConstraintLayout>